swen430as1/tests/valid/trycatch/TryCatch_Valid_11.while
type Exception is { int code }

int[] create(int n, int item) {
    return [item; n];
}

void main() {
    try {
	assert create(1,255) == [255];
	assert create(3,123) == [123,123,123];
	assert create(-1,3) == [123,123,123];
    } catch(Exception e) {
	// negative length exception
	assert e.code == 2;
    }
}
