swen430as1/tests/invalid/trycatch/TryCatch_Invalid_14.while
int f(int x) {
    //
    try {
        return 1;
    } catch(int x) {
        return 2;
    }
    // this is dead code
    return 3;
}